# build-measurand

./: pyarrow.ipynb  pyproject.toml
build_measurand/: __init__.py  component.py  euc.py  factory.py  generic.py  interp.py  measurand.py  parameter.py  sampling.py  utils.py
build_measurand/types/: dec64g.py  jfunc.py  onescomp.py  twoscomp.py
measurand/: measurand.py
measurand/types/: bcd.py  milstd1750a48.py  typing.py  ufunc.py
tests/: cases.py  conftest.py  strategies.py  test_component.py  test_euc.py  test_interp.py  test_measurand.py  test_parameter.py  test_utils.py
